# Book-and-Song-Search

./: LICENSE  ReadMe.md  examine.json  find.py  google_books.py  init_request.py  interface.py  itunes.py  main.yml
app/: Dockerfile  LICENSE  Makefile  docker-compose.yml  setup.cfg  setup.py
app/src/: datatypes.py  find.py  google_books.py  init_request.py  interface.py  itunes.py
app/src/templates/: home_page.html
templates/: home_page.html
