[metadata]
name = Book or Song Search
description = Search for books and songs from a given string
version = 1.0
author = Lazarus Tanaka Mtake

[options]
install_requires =

    Flask 
    requests
    pytest
    pytest-cov
    flake8
    black


[test]
[tool:pytest]
adopts =
    -- verbose

testpaths = tests

[flake8]
exclude =
    .git
    .venv

max-line-length = 88
ignore = E201, E203, E231, E241, E266, E501, W291,W293, W503
